Move main nav specification and sidebar links to YAML files in the _data dir.

--- a/_data/mainNav.yml
+++ b/_data/mainNav.yml
@@ -9,11 +9,19 @@
   label: Programming
   url: "/programming/"
 
+- name: github
+  label: Github
+  url: "http://github.com/misterblue"
+
 - name: archive
   label: Archive
-  url: "/archive/"
+  url: "/archive.html"
 
 - name: about
   label: About
-  url: "/about/"
+  url: "/About.html"
+
+- name: rss
+  label: RSS
+  url: "/feed.xml"
 
