--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ gaaccount: ''
 disqus: ''
 comments: true
 
-permalink: /:year/:month/:title
+permalink: /:year/:year:month:day-:title
 paginate: 3
 
 highlighter: pygments
