Change archive links to be more like the post links. New post on starting Basil.

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ gaaccount: ''
 disqus: 'MisterblueMisterblue'
 comments: true
 
-permalink: /:year/:year:month:day-:title
+permalink: /:year/:year-:month-:day-:title
 paginate: 5
 
 highlighter: pygments
