--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,4 +1,5 @@
 # Listing of current books
+# 'coverImage' should be in directory Books/images/ and should be 100px wide.
 
 - title: Baudolino
   yearRead: 2005
@@ -6,7 +7,7 @@
   coverImage: Book_Baudolino.jpg
   author: Umberto Eco
   authorUrl: http://www.amazon.com/exec/obidos/search-handle-url/index=books&field-author=Eco%2C%20Unberto/
-  comment:
+  review:
 
 - title: The Contemplative Heart
   yearRead: 2005
@@ -14,7 +15,7 @@
   coverImage: Book_ContemplativeHeart.jpg
   authorUrl: http://www.amazon.com/exec/obidos/search-handle-url/index=books&field-author=inley%2C%20James/
   author: James Finley
-  comment:
+  review:
 
 - title: Genome
   yearRead: 2005
@@ -22,6 +23,6 @@
   coverImage: Book_Genome.jpg
   authorUrl: http://www.amazon.com/exec/obidos/search-handle-url/index=books&field-author=Ridley,%20Matt/
   author: Matt Ridley
-  comment:
+  review:
 
 
