--- a/_config.yml
+++ b/_config.yml
@@ -35,4 +35,6 @@ redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 encoding: utf-8
 
+excerpt_separator: <!-- more -->
+
 exclude: ['README.md', 'LICENSE']
