Add structure version of herbal page. Add css for TOC in herbal page. Create _layout/page.html for page with top navigation but not sidebar.

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ permalink: /:year/:year-:month-:day-:title
 paginate: 5
 
 highlighter: pygments
+# Redcarpet doc: https://github.com/vmg/redcarpet
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
