--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,7 @@ permalink: /:year/:year-:month-:day-:title
 paginate: 5
 
 highlighter: pygments
-# Redcarpet doc: https://github.com/vmg/redcarpet
-markdown: redcarpet
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "footnotes", "tables", "with_toc_data"]
+markdown: kramdown
 encoding: utf-8
 
 excerpt_separator: <!-- more -->
