--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ comments: true
 permalink: /:year/:year-:month-:day-:title
 paginate: 5
 
-highlighter: pygments
+highlighter: rouge
 markdown: kramdown
 encoding: utf-8
 
