--- a/_config.yml
+++ b/_config.yml
@@ -20,17 +20,22 @@ github: ''
 # Set this to your UA-# value, or '' to disable the block completely
 gaaccount: 'UA-63061357-1'
 
+comments: true
+
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
 disqus: 'MisterblueMisterblue'
-comments: true
+
+# Set this to your public isso URL to enable comments via isso. Set to '' to disable isso.
+isso: ''
 
 permalink: /:year/:year-:month-:day-:title
 paginate: 5
 
 highlighter: rouge
 markdown: kramdown
+gems: ['jekyll-paginate']
 encoding: utf-8
 
 excerpt_separator: <!-- more -->
