--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ url: "http://blog.misterblue.com"
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
+#baseurl: '/mb-test'
 baseurl: ''
 
 # This can be '' to hide the Github nav button
@@ -29,6 +30,9 @@ disqus: 'MisterblueMisterblue'
 
 # Set this to your public isso URL to enable comments via isso. Set to '' to disable isso.
 isso: ''
+
+sass:
+    style: compressed
 
 permalink: /:year/:year-:month-:day-:title
 paginate: 5
