--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ url: "http://blog.misterblue.com"
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: '/mb-test'
-#baseurl: ''
+#baseurl: '/mb-test'
+baseurl: ''
 
 # This can be '' to hide the Github nav button
 github: ''
