--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,9 @@ paginate: 5
 
 highlighter: rouge
 markdown: kramdown
-gems: ['jekyll-paginate']
+gems:
+    - jekyll-paginate
+    - jemoji
 encoding: utf-8
 
 excerpt_separator: <!-- more -->
